--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
     <a class="navbar-brand" href="#">
         <img src="{{ url_for('static', filename='images/logo.png') }}" width="30" height="30" class="d-inline-block align-top" alt="">
         微信&SalesForce Leads上传工具
+        <small class="text-muted d-block .extra-small-text">本程序仅限在公司电脑使用，适用于工作微信号，仅供Student Medicover内部使用。</small>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
