--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link text-primary" href="https://smcovered-my.sharepoint.com/:w:/p/zbmen/ERjlTf9HRClPutuLzzKM17cB2mrSkm4SpsFQq4Dy4G5OJw?e=yggSXq" target="_blank">使用说明</a>
+            <a class="nav-item nav-link faq-link" href="https://smcovered-my.sharepoint.com/:w:/p/zbmen/EZ_oYp_5juJKkEZUC22LmYgBskhvlfYW22viv-MvABc5yg?e=nWgMnj" target="_blank">FAQ</a>
+            <a class="nav-item nav-link text-primary" href="https://smcovered-my.sharepoint.com/:w:/p/zbmen/EdyCsQa4r6xDnsXfiy6kn4kB1tK33NHQeCHE1uIEx3CqMA?e=F4S0bD" target="_blank">使用说明</a>
             <a class="nav-item nav-link text-primary" href="https://smcovered-my.sharepoint.com/:x:/p/zbmen/EU2S8RQcagpOgVlPzxm-FtgBb1N-Wnws55e6DdpPk1lzkQ?e=hQctwU" target="_blank">反馈建议</a>
             <a class="nav-item nav-link text-primary" href="https://github.com/joycedoor/WechatLead/blob/main/updatelog.md" target="_blank">更新日志</a>
         </div>
