--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -47,3 +47,13 @@
     font-size: 0.7rem; /* 设置较小的字体大小 */
     line-height: 1.2; /* 适当调整行高以改善可读性 */
 }
+
+.nav-item.nav-link.faq-link {
+    color: black; /* 初始颜色为黑色 */
+    font-weight: bold; /* 加粗字体 */
+    background: linear-gradient(to right, red 50%, black 50%); /* 背景渐变，红黑交替 */
+    -webkit-background-clip: text; /* 仅将背景应用于文字 */
+    background-clip: text;
+    color: transparent; /* 使文字颜色透明，显示背景 */
+    transition: transform 0.3s ease; /* 添加平滑的变换效果 */
+}
