feat: 联系人处新增搜索框

--- a/templates/index.html
+++ b/templates/index.html
@@ -184,6 +184,7 @@
     </div>
     <div class="row">
         <div class="col-4">
+            <input type="text" id="search-input" class="form-control mb-3" style="margin-top:5px" placeholder="Search contacts...">
             <!-- 联系人筛选框 -->
             <div class="filter-section">
                 <input type="checkbox" id="hide-lead-checkbox">
