--- a/templates/index.html
+++ b/templates/index.html
@@ -228,6 +228,10 @@
                                 </select>
                             </div>
                             <div class="form-group">
+                                <label for="FirstName">First Name</label>
+                                <input type="text" class="form-control" id="FirstName">
+                            </div>
+                            <div class="form-group">
                                 <label for="LastName">Last Name</label>
                                 <input type="text" class="form-control" id="LastName">
                             </div>
